# youtube-downloader

./: .bumpversion.toml  .gitignore  BulkAudioDownload.py  BulkVideoDownload.py  DownloadAudio.py  DownloadVideo.py  DownloadVideoWithCaption.py  LICENSE  README.md  app.cmd  app.py  askURL.py  downloader.py  justfile  makefile  notify.py  progressBar.py  pyproject.toml  requirements.txt  setup.sh  start.sh  update.cmd
youtube-downloader/: __init__.py  app.py  cli.py
youtube-downloader/helpers/: BulkAudioDownload.py  BulkVideoDownload.py  DownloadAudio.py  DownloadVideo.py  DownloadVideoWithCaption.py  __init__.py  askURL.py  util.py
youtube_downloader/: VERSION  __init__.py  cli.py
youtube_downloader/helpers/: BulkAudioDownload.py  BulkVideoDownload.py  DownloadAudio.py  DownloadVideo.py  DownloadVideoWithCaption.py  __init__.py  util.py
