[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "youtube-downloader-cli"
authors = [{ name = "duong", email = "dotungduong2@gmail.com" }]
description = "CLI tool for download from YouTube"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version"]
dependencies = [
    "pyperclip==1.9.0",
    "pytubefix>=8.12",
    "questionary==2.1.0",
    "rich>=13.9",
]

[project.urls]
Home = "https://github.com/duong-dt/youtube-downloader"

[project.scripts]
youtube-downloader = "youtube_downloader.__main__:main"

[tool.flit.module]
name = "youtube_downloader"
