[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-downloader-cli"
authors = [{ name = "duong", email = "dotungduong2@gmail.com" }]
description = "CLI tool for download from YouTube"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version"]
dependencies = [
    "pyperclip==1.9.0",
    "pytubefix>=8.12",
    "questionary==2.1.0",
    "rich>=13.9",
]

[project.urls]
Home = "https://github.com/duong-dt/youtube-downloader"

[project.scripts]
youtube-downloader = "youtube_downloader.__main__:main"

[project.optional-dependencies]
dev = ["ruff>=0.9.2"]

[tool.setuptools.dynamic]
version = { file = ["youtube_downloader/VERSION"] }

[tool.setuptools.package-data]
file = ["VERSION"]

[tool.ruff]
line-length = 99

[tool.ruff.lint]
extend-select = ["I", "TID252", "A", "UP", "PTH", "RUF", "ANN"]

[tool.ruff.lint.flake8-tidy-imports]
# Disallow all relative imports.
ban-relative-imports = "all"

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
